--- a/metal/mmtl/cxr/nerdd/train_chest_tube_model_new_val.ipynb
+++ b/metal/mmtl/cxr/nerdd/train_chest_tube_model_new_val.ipynb
@@ -261,28 +261,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "trainer_config = log_jsons['config']\n",
-    "trainer_config.update({\n",
-    "    'checkpoint_dir':None,\n",
+    "trainer_config['writer_config'].update({\n",
     "    'run_name': 'nerdd_chest_tube_cxr8_val'\n",
+    "})\n",
+    "trainer_config['checkpoint_config'].update({\n",
+    "    'checkpoint_dir':None,\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_18_57/model_config.json\n",
-      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_18_57/task_config.json\n"
+      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_45_49/model_config.json\n",
+      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_45_49/task_config.json\n"
      ]
     }
    ],
@@ -313,15 +315,13 @@
       "metal.mmtl.trainer - INFO - Beginning train loop.\n",
       "metal.mmtl.trainer - INFO - Expecting a total of approximately 62960 examples and 3935 batches per epoch from 1 payload(s) in the train split.\n",
       "metal.mmtl.trainer - INFO - Using previously initialized log writer during training...\n",
-      "/lfs/1/jdunnmon/repos/metal/metal/mmtl/trainer.py:645: UserWarning: You have provided checkpoint_dir, overriding the default of using log_dir/run_dir/run_name/checkpoints. Be careful: multiple concurrent runs may override each other.\n",
-      "  warnings.warn(msg)\n",
-      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_18_57/config.json\n"
+      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_45_49/config.json\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fba80a6771134898ba20da519f668560",
+       "model_id": "5126e82939ba42bea6d8828f3f22b7b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,6 +343,72 @@
    ],
    "source": [
     "trainer.train_model(model, payloads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_val = model.score(test_payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_test/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/f1': 0.14157706093189962,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_test/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/roc-auc': 0.799792209632348,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_test/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/accuracy': 0.9572950563901396,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_test/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/precision': 0.17792792792792791,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_test/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/recall': 0.11755952380952381}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_val_nerdd = model.score(nerdd_payloads[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_valid/NERDD-CHEST-TUBE_CHEST_TUBE/f1': 0.62532981530343,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_valid/NERDD-CHEST-TUBE_CHEST_TUBE/roc-auc': 0.9338492171240635,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_valid/NERDD-CHEST-TUBE_CHEST_TUBE/accuracy': 0.9052656659518704,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_valid/NERDD-CHEST-TUBE_CHEST_TUBE/precision': 0.5179519200749297,\n",
+       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_valid/NERDD-CHEST-TUBE_CHEST_TUBE/recall': 0.7888730385164051}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_val_nerdd"
    ]
   },
   {
